--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,400;0,500;0,600;1,400;1,500&family=Ephesis&family=Oranienbaum&family=Ubuntu&display=swap" rel="stylesheet">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script> -->
+	-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="js/popup_img.js"></script>
 	<script src="js/lang.js"></script>
 	<title>Наталья Гераськина. Гештальт-терапевт в Испании и онлайн</title>
