--- a/index.html
+++ b/index.html
@@ -63,28 +63,28 @@
 					<img src="images/psychology1.png" alt="">
 					<span>ПРОБЛЕМЫ ДЕТЕЙ<br>И ПОДРОСТКОВ</span>
 					<div>
-						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? </p>
+						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 					</div>
 				</li>
 				<li>
 					<img src="images/emotion1.png" alt="">
 					<span>СЛОЖНОСТИ<br>В ОТНОШЕНИЯХ</span>
 					<div>
-						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? </p>
+						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 					</div>
 				</li>
 				<li>
 					<img src="images/depression1.png" alt="">
 					<span>ДЕПРЕССИЯ,<br>ЭМОЦИОНАЛЬНЫЕ ТРАВМЫ</span>
 					<div>
-						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? </p>
+						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 					</div>
 				</li>
 				<li>
 					<img src="images/idea1.png" alt="">
 					<span>САМОРАЗВИТИЕ И <br>ЛИЧНОСТНЫЙ РОСТ</span>
 					<div>
-						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? </p>
+						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 					</div>
 				</li>
 			</ul>
@@ -215,10 +215,11 @@
 					<div class="social">
 						<h6>социальные сети</h6>
 						<ul>
-							<li><a href="facebook.com"><img src="images/icons/facebook.svg" alt=""></a></li>
-							<li><a href="youtube.com"><img src="images/icons/youtube.svg" alt=""></a></li>
-							<li><a href="instagram.com"><img src="images/icons/instagram.svg" alt=""></a></li>
-							<li><a href="telegram.com"><img src="images/icons/telegram.svg" alt=""></a></li>
+							<li><a href="https://www.facebook.com/yourcoachinspain" target="_blank"><img src="images/icons/facebook.svg" alt=""></a></li>
+							<li><a href="https://vk.com/psy_spain" target="_blank"><img src="images/icons/vk.svg" alt=""></a></li>
+							<li><a href="https://youtube.com/channel/UCgButFPPAo4y4lg7HBvhUDg" target="_blank"><img src="images/icons/youtube.svg" alt=""></a></li>
+							<li><a href="https://www.instagram.com/invites/contact/?i=1a3cvuy14mz3q&utm_content=kuy98vm" target="_blank"><img src="images/icons/instagram.svg" alt=""></a></li>
+							<li><a href="https://t.me/NatalieGeraskina_Psy_Spain" target="_blank"><img src="images/icons/telegram.svg" alt=""></a></li>
 						</ul>
 					</div>
 					<div class="personal-consult">
@@ -239,8 +240,8 @@
 					</div>
 					<div class="contacts">
 						<h6>связаться со мной</h6>
-						<a href="whatsapp.com"><img src="images/icons/whatsapp.svg" alt=""></a>
-						<a href="telegram.com"><img src="images/icons/telegram.svg" alt=""></a>
+						<a href="https://wa.me/34603496541" target="_blank"><img src="images/icons/whatsapp.svg" alt=""></a>
+						<a href="tg://resolve?domain=<Psy_Spain>" target="_blank"><img src="images/icons/telegram.svg" alt=""></a>
 					</div>
 					<div class="credits">
 						<h6>Атрибуция</h6>
