--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 		<section>
 			<h3>ЗАПИШИТЕСЬ НА КОНСУЛЬТАЦИЮ СЕЙЧАС:</h3>
 			<div>
-				<a href="https://wa.me/34603496541?text=%D0%9D%D0%B0%D1%82%D0%B0%D0%BB%D1%8C%D1%8F,%20%D0%B4%D0%BE%D0%B1%D1%80%D1%8B%D0%B9%20%D0%B4%D0%B5%D0%BD%D1%8C!%20%D0%98%D0%BD%D1%82%D0%B5%D1%80%D0%B5%D1%81%D1%83%D0%B5%D1%82%20%D0%B1%D0%B5%D1%81%D0%BF%D0%BB%D0%B0%D1%82%D0%BD%D0%B0%D1%8F%20%D0%BE%D0%BD%D0%BB%D0%B0%D0%B9%D0%BD%20%D0%BA%D0%BE%D0%BD%D1%81%D1%83%D0%BB%D1%8C%D1%82%D0%B0%D1%86%D0%B8%D1%8F">
+				<a href="https://wa.me/34603496541?text=%D0%9D%D0%B0%D1%82%D0%B0%D0%BB%D1%8C%D1%8F,%20%D0%B4%D0%BE%D0%B1%D1%80%D1%8B%D0%B9%20%D0%B4%D0%B5%D0%BD%D1%8C!%20%D0%98%D0%BD%D1%82%D0%B5%D1%80%D0%B5%D1%81%D1%83%D0%B5%D1%82%20%D0%B1%D0%B5%D1%81%D0%BF%D0%BB%D0%B0%D1%82%D0%BD%D0%B0%D1%8F%20%D0%BE%D0%BD%D0%BB%D0%B0%D0%B9%D0%BD%20%D0%BA%D0%BE%D0%BD%D1%81%D1%83%D0%BB%D1%8C%D1%82%D0%B0%D1%86%D0%B8%D1%8F" target="_blank">
 					<div class="consult">
 						<p>Первая онлайн-консультация (30 мин)</p>
 						<p>БЕСПЛАТНО</p>
@@ -145,7 +145,7 @@
 					</div>
 				</a>
 				</div>
-				<a href="https://wa.me/34603496541?text=%D0%9D%D0%B0%D1%82%D0%B0%D0%BB%D1%8C%D1%8F,%20%D0%B4%D0%BE%D0%B1%D1%80%D1%8B%D0%B9%20%D0%B4%D0%B5%D0%BD%D1%8C!%20%D0%98%D0%BD%D1%82%D0%B5%D1%80%D0%B5%D1%81%D1%83%D0%B5%D1%82%20%D0%B8%D0%BD%D0%B4%D0%B8%D0%B2%D0%B8%D0%B4%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F%20%D1%81%D0%B5%D1%81%D1%81%D0%B8%D1%8F">
+				<a href="https://wa.me/34603496541?text=%D0%9D%D0%B0%D1%82%D0%B0%D0%BB%D1%8C%D1%8F,%20%D0%B4%D0%BE%D0%B1%D1%80%D1%8B%D0%B9%20%D0%B4%D0%B5%D0%BD%D1%8C!%20%D0%98%D0%BD%D1%82%D0%B5%D1%80%D0%B5%D1%81%D1%83%D0%B5%D1%82%20%D0%B8%D0%BD%D0%B4%D0%B8%D0%B2%D0%B8%D0%B4%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F%20%D1%81%D0%B5%D1%81%D1%81%D0%B8%D1%8F" target="_blank">
 					<div class="consult">
 						<p>Индивидуальная сессия (1.15 ч)</p>
 						<p>45 &euro;</p>
@@ -154,7 +154,7 @@
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae sit ullam perferendis sapiente earum? Quo, harum culpa! Voluptatibus, cumque nesciunt! Ipsum unde ullam vero reiciendis possimus impedit nisi quod minus.</p>
 					</div>
 				</a>
-				<a href="https://wa.me/34603496541?text=%D0%9D%D0%B0%D1%82%D0%B0%D0%BB%D1%8C%D1%8F,%20%D0%B4%D0%BE%D0%B1%D1%80%D1%8B%D0%B9%20%D0%B4%D0%B5%D0%BD%D1%8C!%20%D0%98%D0%BD%D1%82%D0%B5%D1%80%D0%B5%D1%81%D1%83%D0%B5%D1%82%20%D1%82%D0%B5%D1%80%D0%B0%D0%BF%D0%B5%D0%B2%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9%20%D1%83%D1%80%D0%BE%D0%BA">
+				<a href="https://wa.me/34603496541?text=%D0%9D%D0%B0%D1%82%D0%B0%D0%BB%D1%8C%D1%8F,%20%D0%B4%D0%BE%D0%B1%D1%80%D1%8B%D0%B9%20%D0%B4%D0%B5%D0%BD%D1%8C!%20%D0%98%D0%BD%D1%82%D0%B5%D1%80%D0%B5%D1%81%D1%83%D0%B5%D1%82%20%D1%82%D0%B5%D1%80%D0%B0%D0%BF%D0%B5%D0%B2%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9%20%D1%83%D1%80%D0%BE%D0%BA" target="_blank">
 					<div class="consult">
 						<p>Терапевтический урок (1.15 ч)</p>
 						<p>45 &euro;</p>
@@ -163,7 +163,7 @@
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae sit ullam perferendis sapiente earum? Quo, harum culpa! Voluptatibus, cumque nesciunt! Ipsum unde ullam vero reiciendis possimus impedit nisi quod minus.</p>
 					</div>
 				</a>
-				<a href="https://wa.me/34603496541?text=%D0%9D%D0%B0%D1%82%D0%B0%D0%BB%D1%8C%D1%8F,%20%D0%B4%D0%BE%D0%B1%D1%80%D1%8B%D0%B9%20%D0%B4%D0%B5%D0%BD%D1%8C!%20%D0%98%D0%BD%D1%82%D0%B5%D1%80%D0%B5%D1%81%D1%83%D0%B5%D1%82%20%D0%BF%D0%B0%D0%BA%D0%B5%D1%82%20%D0%B8%D0%B7%205%20%D0%BA%D0%BE%D0%BD%D1%81%D1%83%D0%BB%D1%8C%D1%82%D0%B0%D1%86%D0%B8%D0%B9">
+				<a href="https://wa.me/34603496541?text=%D0%9D%D0%B0%D1%82%D0%B0%D0%BB%D1%8C%D1%8F,%20%D0%B4%D0%BE%D0%B1%D1%80%D1%8B%D0%B9%20%D0%B4%D0%B5%D0%BD%D1%8C!%20%D0%98%D0%BD%D1%82%D0%B5%D1%80%D0%B5%D1%81%D1%83%D0%B5%D1%82%20%D0%BF%D0%B0%D0%BA%D0%B5%D1%82%20%D0%B8%D0%B7%205%20%D0%BA%D0%BE%D0%BD%D1%81%D1%83%D0%BB%D1%8C%D1%82%D0%B0%D1%86%D0%B8%D0%B9" target="_blank">
 					<div class="consult">
 						<p>Пакет из 5 консультаций (5.75 ч)</p>
 						<p>200 &euro;</p>
