--- a/index.html
+++ b/index.html
@@ -57,42 +57,44 @@
 		</section>
 		<!-- 2 -->
 		<section>
-			<h3>С ЧЕМ Я РАБОТАЮ</h3>
-			<ul>
-				<li>
-					<img src="images/psychology1.png" alt="">
-					<span>ПРОБЛЕМЫ ДЕТЕЙ<br>И ПОДРОСТКОВ</span>
-					<div>
-						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-					</div>
-				</li>
-				<li>
-					<img src="images/emotion1.png" alt="">
-					<span>СЛОЖНОСТИ<br>В ОТНОШЕНИЯХ</span>
-					<div>
-						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-					</div>
-				</li>
-				<li>
-					<img src="images/depression1.png" alt="">
-					<span>ДЕПРЕССИЯ,<br>ЭМОЦИОНАЛЬНЫЕ ТРАВМЫ</span>
-					<div>
-						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-					</div>
-				</li>
-				<li>
-					<img src="images/idea1.png" alt="">
-					<span>САМОРАЗВИТИЕ И <br>ЛИЧНОСТНЫЙ РОСТ</span>
-					<div>
-						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-					</div>
-				</li>
-			</ul>
+			<div class="problems">
+				<h3>С ЧЕМ Я РАБОТАЮ</h3>
+				<ul>
+					<li>
+						<img src="images/psychology1.png" alt="">
+						<span>ПРОБЛЕМЫ ДЕТЕЙ<br>И ПОДРОСТКОВ</span>
+						<div>
+							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+						</div>
+					</li>
+					<li>
+						<img src="images/emotion1.png" alt="">
+						<span>СЛОЖНОСТИ<br>В ОТНОШЕНИЯХ</span>
+						<div>
+							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+						</div>
+					</li>
+					<li>
+						<img src="images/depression1.png" alt="">
+						<span>ДЕПРЕССИЯ,<br>ЭМОЦИОНАЛЬНЫЕ ТРАВМЫ</span>
+						<div>
+							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+						</div>
+					</li>
+					<li>
+						<img src="images/idea1.png" alt="">
+						<span>САМОРАЗВИТИЕ И <br>ЛИЧНОСТНЫЙ РОСТ</span>
+						<div>
+							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+						</div>
+					</li>
+				</ul>
+			</div>
 		</section>
 		<!-- 3 -->
-		<section>
-			<div class="photo-profile"></div>
-			<div>
+		<section class="greeting">
+			<aside class="photo-profile"></aside>
+			<article class="greeting-text">
 				<h6>Hola a todos!</h6>
 				<p>Меня зовут Наталья и я — практикующий психолог, лингвист-педагог, коуч, гештальт терапевт с 15-летним опытом в сфере образования и психологии в России и Испании.</p>
 				<br>
@@ -110,7 +112,7 @@
 				<p>В данный момент я учусь в Испании на гештальт-терапевта (с 2021 по 2023 г).</p>
 				<br>
 				<p>Буду рада видеть вас на личной консультации в городе Blanes (Barcelona) или online.</p>
-			</div>
+			</article>
 		</section>
 		<!-- 4 -->
 		<section>
