--- a/index.html
+++ b/index.html
@@ -57,38 +57,28 @@
 		</section>
 		<!-- 2 -->
 		<section>
+			<h3>С ЧЕМ Я РАБОТАЮ</h3>
 			<div class="problems">
-				<h3>С ЧЕМ Я РАБОТАЮ</h3>
-				<ul>
-					<li>
-						<img src="images/psychology1.png" alt="">
-						<span>ПРОБЛЕМЫ ДЕТЕЙ<br>И ПОДРОСТКОВ</span>
-						<div>
-							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-						</div>
-					</li>
-					<li>
-						<img src="images/emotion1.png" alt="">
-						<span>СЛОЖНОСТИ<br>В ОТНОШЕНИЯХ</span>
-						<div>
-							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-						</div>
-					</li>
-					<li>
-						<img src="images/depression1.png" alt="">
-						<span>ДЕПРЕССИЯ,<br>ЭМОЦИОНАЛЬНЫЕ ТРАВМЫ</span>
-						<div>
-							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-						</div>
-					</li>
-					<li>
-						<img src="images/idea1.png" alt="">
-						<span>САМОРАЗВИТИЕ И <br>ЛИЧНОСТНЫЙ РОСТ</span>
-						<div>
-							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-						</div>
-					</li>
-				</ul>
+				<div>
+					<img src="images/psychology1.png" alt="">
+					<h5>ПРОБЛЕМЫ ДЕТЕЙ<br>И ПОДРОСТКОВ</h5>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+				</div>
+				<div>
+					<img src="images/emotion1.png" alt="">
+					<h5>СЛОЖНОСТИ<br>В ОТНОШЕНИЯХ</h5>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+				</div>
+				<div>
+					<img src="images/depression1.png" alt="">
+					<h5>ДЕПРЕССИЯ,<br>ЭМОЦИОНАЛЬНЫЕ ТРАВМЫ</h5>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+				</div>
+				<div>
+					<img src="images/idea1.png" alt="">
+					<h5>САМОРАЗВИТИЕ И <br>ЛИЧНОСТНЫЙ РОСТ</h5>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ipsum quod dignissimos, similique ipsa minima laudantium! Voluptatum, magni. Modi quibusdam dolores laborum sint temporibus placeat quae alias ex. Iusto, quisquam? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+				</div>
 			</div>
 		</section>
 		<!-- 3 -->
