--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
 		</section>
 		<!-- 3 -->
 		<section class="greeting">
-			<aside class="photo-profile"></aside>
+			<aside class="photo-profile">
+				<img src="images/portrait2.jpg" alt="">
+			</aside>
 			<article class="greeting-text">
 				<h6>Hola a todos!</h6>
 				<p>Меня зовут Наталья и я — практикующий психолог, лингвист-педагог, коуч, гештальт терапевт с 15-летним опытом в сфере образования и психологии в России и Испании.</p>
