--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 		</section>
 		<!-- 3 -->
 		<section class="greeting">
-			<aside class="photo-profile">
+			<div class="photo-profile">
 				<img src="images/portrait2.jpg" alt="">
-			</aside>
-			<article class="greeting-text">
+			</div>
+			<div class="greeting-text">
 				<h6>Hola a todos!</h6>
 				<p>Меня зовут Наталья и я — практикующий психолог, лингвист-педагог, коуч, гештальт терапевт с 15-летним опытом в сфере образования и психологии в России и Испании.</p>
 				<br>
@@ -104,7 +104,7 @@
 				<p>В данный момент я учусь в Испании на гештальт-терапевта (с 2021 по 2023 г).</p>
 				<br>
 				<p>Буду рада видеть вас на личной консультации в городе Blanes (Barcelona) или online.</p>
-			</article>
+			</div>
 		</section>
 		<!-- 4 -->
 		<section>
