--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 					<div class="contacts">
 						<h6>связаться со мной</h6>
 						<a href="https://wa.me/34603496541" target="_blank"><img src="images/icons/whatsapp.svg" alt=""></a>
-						<a href="tg://resolve?domain=<Psy_Spain>" target="_blank"><img src="images/icons/telegram.svg" alt=""></a>
+						<a href="https://t.me/+34603496541" target="_blank"><img src="images/icons/telegram.svg" alt=""></a>
 					</div>
 					<div class="credits">
 						<h6>Атрибуция</h6>
