--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- <link rel="prefetch prerender" href="images/profile5.png" /> -->
-	<script src="js/preload.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script async src="js/preload.js"></script>
 	<link rel="stylesheet" href="style.css">
 	<link rel="dns-prefetch" href="//fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,400;0,500;0,600;1,400;1,500&family=Ephesis&family=Oranienbaum&family=Ubuntu&display=swap" rel="stylesheet">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="js/lang.js"></script>
-	<script src="js/popup_img.js"></script>
 	<title>Наталья Гераськина. Гештальт-терапевт в Испании и онлайн</title>
 	<style>
 	</style>
@@ -104,6 +102,7 @@
 		</section>
 		<!-- 4 -->
 		<section>
+			<script src="js/popup_img.js"></script>
 			<h3>КВАЛИФИКАЦИЯ</h3>
 			<div class="slider">
 				<img src="images/diploma/Diploma1.jpg" class="image" title="Нажмите для увеличения изображения" height="200" tabindex="0">
