--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script async src="js/preload.js"></script>
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script async src="js/preload.js"></script> -->
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,6 +18,9 @@
 </head>
 <body>
 	<header>
+		<div style="position:fixed;left:9999px;opacity:0;">
+			<img src="images/profile5.png">
+		</div>
 		<div class="navigation">
 			<div class="logo">
 				<h1>NATALIE GERASKINA</h1>
