--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
 		</section>
 		<!-- 4 -->
 		<section>
-			<script src="js/popup_img.js"></script>
 			<h3>КВАЛИФИКАЦИЯ</h3>
 			<div class="slider">
 				<img src="images/diploma/Diploma1.jpg" class="image" title="Нажмите для увеличения изображения" height="200" tabindex="0">
@@ -245,5 +244,7 @@
 			</div>
 		</footer>
 	</main>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="js/popup_img.js"></script>
 </body>
 </html>
